multiplayer with web sockets

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,7 @@
     <title>Boats</title>
 </head>
 <body>
-    <p>test</p>
-    <!-- <div id="boat-holder">
-        <img src="/style/images/boat.png" alt="boat">
-    </div> -->
+    <canvas id="canvas"></canvas>
 </body>
 <script src="/socket.io/socket.io.js"></script>
 <script type="module" src="js/client.js"></script>
