lobby screen and tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/style/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/style/style.css" />
     <title>Boats</title>
 </head>
+<style>
+    @font-face {
+        font-family: "doblon";
+        src: url("style/doblons.ttf") format("truetype");
+    }
+
+    body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        overflow: hidden;
+    }
+</style>
 <body>
     <canvas id="canvas"></canvas>
 </body>
