--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/style/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/style/style.css" />
+    <script src="/thirdParty/jquery.js"></script>
     <title>Boats</title>
 </head>
-<style>
-    @font-face {
-        font-family: "doblon";
-        src: url("style/doblons.ttf") format("truetype");
-    }
-
-    body {
-        margin: 0;
-        padding: 0;
-        height: 100vh;
-        overflow: hidden;
-    }
-</style>
 <body>
-    <canvas id="canvas"></canvas>
+    <div id="center">
+        <div class="f">
+            <p id="title1">BOATS</p><p id="title2">.IO</p>
+        </div>
+        <div id="username-holder">
+            <input id="username-input" type="text" spellcheck="false" maxlength="15">
+            <div id="start-button">
+                <p>SET SAIL</p>
+                <img src="/style/icons/arrow-right.svg">
+            </div>
+        </div>
+    </div>
+    <p id="created-by">made by <a href="https://github.com/finnmprice" target="_blank">finn price</a></p>
 </body>
 <script src="/socket.io/socket.io.js"></script>
-<script type="module" src="js/client.js"></script>
+<script type="module" src="js/lobby.js"></script>
 </html>
