--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <p id="title1">BOATS</p><p id="title2">.IO</p>
         </div>
         <div id="username-holder">
-            <input id="username-input" type="text" spellcheck="false" maxlength="15">
+            <input id="username-input" type="text" autofocus="true" autocorrect="off" spellcheck="false" autocomplete="off" maxlength="15">
             <div id="start-button">
                 <p>SET SAIL</p>
                 <img src="/style/icons/arrow-right.svg">
